# l2c

./: CMakeLists.txt
include/: student.h
src/: main.cpp  student.cpp
